# PPCProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md  bsp.h  color.c  color.h  console.c  console.h  cvar.c  cvar.h  draw.c  draw.h  entity_src.c  entity_src.h  ezlife.h  font.c  font.h  game.c  game.h  glad.c  glad.h  input.c  input.h  main.c  maindef.h  memory.c  memory.h  ourmath.h  physics.h  shader.c  shader.h  shaders.h  soliddraw.c  soliddraw.h  texture.c  texture.h  world.c  world.h
assets/: default.cfg
assets/maps/: abc.bsp  it_building.bsp  testcube.bsp
assets/wads/: LQ_LICENSE.txt
mapsrc/: it_building.bsp  it_building.map  it_building.prt  it_building.pts  testcube.map
mapsrc/autosave/: it_building.1.map  it_building.10.map  it_building.11.map  it_building.12.map  it_building.13.map  it_building.14.map  it_building.15.map  it_building.16.map  it_building.17.map  it_building.18.map  it_building.19.map  it_building.2.map  it_building.20.map  it_building.21.map  it_building.22.map  it_building.24.map  it_building.25.map  it_building.27.map  it_building.29.map  it_building.3.map  it_building.30.map  it_building.31.map  it_building.32.map  it_building.33.map  it_building.35.map  it_building.36.map  it_building.37.map  it_building.38.map  it_building.39.map  it_building.4.map  it_building.40.map  it_building.41.map  it_building.42.map  it_building.43.map  it_building.44.map  it_building.45.map  it_building.46.map  it_building.47.map  it_building.48.map  it_building.49.map  (+6 more)
